--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1865,13 +1865,17 @@ See [[info:ccmode#Customizing%20Indentation][Customizing Indentation (info)]].
      ("C-M-a" . org-previous-block)
      ("C-M-e" . org-next-block))
     :preface
+    (declare-function org-clock-persistence-insinuate "org")
+
     (defun koek-org/setup-tag-completion ()
       "Setup tag completion for current.
   Candidates are collected from agenda files."
       (setq-local org-complete-tags-always-offer-all-agenda-tags t))
+
+    ;; Setup resume clock after showing initial buffer
+    (add-hook 'window-setup-hook #'org-clock-persistence-insinuate)
     :config
     (declare-function org-babel-do-load-languages "org")
-    (declare-function org-clock-persistence-insinuate "org")
     (declare-function org-redisplay-inline-images "org")
 
     (use-package avy
@@ -1903,7 +1907,6 @@ See [[info:ccmode#Customizing%20Indentation][Customizing Indentation (info)]].
 
     ;; Other
     (setq org-keep-stored-link-after-insertion t)
-    (org-clock-persistence-insinuate)
     (org-babel-do-load-languages 'org-babel-load-languages
                                  '((C . t) ; C and C++
                                    (clojure . t)
@@ -1958,7 +1961,11 @@ See [[info:ccmode#Customizing%20Indentation][Customizing Indentation (info)]].
      ("C-c o o" . org-clock-out)
      ("C-c o x" . org-clock-cancel))
     :config
-    (setq org-clock-persist 'clock))
+    (declare-function org-clock-load "org-clock")
+
+    (setq org-clock-persist 'clock)
+
+    (org-clock-load))
 
   (use-package org-src
     :bind
