[emacs] Fix recentf ELPA exclude regexp.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -163,7 +163,8 @@ Move deleted files to trash.
     :config
     (mapc (apply-partially #'add-to-list 'recentf-exclude)
           (list "/share/emacs/"
-                (locate-user-emacs-file "elpa/")
+                ;; Elements are regexps, ~/ and /home/user/ differ
+                (expand-file-name (locate-user-emacs-file "elpa/"))
                 no-littering-etc-directory
                 no-littering-var-directory))
     (recentf-mode))
