[emacs] Bind counsel-file-jump.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1140,6 +1140,7 @@ Enable minibuffer commands (e.g. [[*counsel - Ivy powered commands][counsel]]) i
      ([remap execute-extended-command] . counsel-M-x)
      ([remap info-lookup-symbol] . counsel-info-lookup-symbol)
      ("C-M-s" . counsel-ag)
+     ("C-c f s" . counsel-file-jump)
      ("C-c f l" . counsel-find-library)
      ("C-c j d" . counsel-imenu)
      ("C-c j o" . counsel-org-goto-all)
