--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1259,6 +1259,11 @@ Enable minibuffer commands (e.g. [[*counsel - Ivy powered commands][counsel]]) i
       "C-c r" "refactor"
       "C-c w" "windows"
       "C-c x" "other")
+
+    ;; Resolve rename keybinding conflict with org
+    (which-key-add-major-mode-key-based-replacements 'org-mode
+      "C-c !" nil)
+
     (which-key-mode)
     :delight)
 #+END_SRC
