--- a/dotfiles.org
+++ b/dotfiles.org
@@ -1,6 +1,19 @@
 #+TITLE: Dotfiles
 #+PROPERTY: header-args :mkdirp yes
 
+* Git
+:PROPERTIES:
+:header-args+: :tangle .config/git/config
+:END:
+
+Set identity.
+
+#+BEGIN_SRC conf
+  [user]
+  name = Nicolas De Jaeghere
+  email = nicodeja@gmail.com
+#+END_SRC
+
 * GNOME Shell app folders
 To apply configuration, run:
 
