--- a/.emacs.d/90-personal.org
+++ b/.emacs.d/90-personal.org
@@ -133,10 +133,10 @@ Set news feeds.
       "List of news feeds.
   News feed is a list of format:
 
-  (\"title\" \"url\" tag*)
-  (\"title\" reddit \"id\" tag*)
-  (\"title\" reddit top \"id\" tag*)
-  (\"title\" youtube \"id\" tag*)")
+  (\"title\" \"url\" tag-1 tag-2 tag-n)
+  (\"title\" reddit \"id\" tag-1 tag-2 tag-n)
+  (\"title\" reddit top \"id\" tag-1 tag-2 tag-n)
+  (\"title\" youtube \"id\" tag-1 tag-2 tag-n)")
 
     (defun koek/add-feed (title url &rest tags)
       "Add news feed to the database.
