[git] Split paragraph.

--- a/dotfiles.org
+++ b/dotfiles.org
@@ -19,11 +19,13 @@ Set identity.
 :header-args+: :tangle .config/git/ignore
 :END:
 
-Ignore common artifacts. For pattern format, see ~man 5 gitignore~.
+Ignore common artifacts.
 
 #+BEGIN_SRC fundamental
   node_modules/
 #+END_SRC
+
+For pattern format, see ~man 5 gitignore~.
 
 * GNOME Shell app folders
 To apply configuration, run:
