[git] Join paragraphs.

--- a/dotfiles.org
+++ b/dotfiles.org
@@ -19,13 +19,11 @@ Set identity.
 :header-args+: :tangle .config/git/ignore
 :END:
 
-Ignore common artifacts.
+Ignore common artifacts. For pattern format, see ~man 5 gitignore~.
 
 #+BEGIN_SRC fundamental
   node_modules/
 #+END_SRC
-
-For pattern format, see ~man 5 gitignore~.
 
 * GNOME Shell app folders
 To apply configuration, run:
